src/platform/storage/harbor/configs/traefik/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: harbor
  namespace: harbor
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ocr.jcan.dev`)
      kind: Rule
      middlewares:
        - name: harbor-buffering # Ensure this is listed here
          namespace: harbor
      services:
        - name: harbor-core
          port: 80
          serversTransport: harbor-transport
